[gd_scene load_steps=19 format=3 uid="uid://dnbdva85d2d60"]

[ext_resource type="Script" uid="uid://njhp6h86vj46" path="res://wheels/chevrolet.gd" id="1_704yv"]
[ext_resource type="Script" uid="uid://ckubxjo1brra0" path="res://spin.gd" id="3_704yv"]
[ext_resource type="PackedScene" uid="uid://xm2wr8who7eq" path="res://1990_corvette_c4/scene.gltf" id="4_h78xa"]
[ext_resource type="FontFile" uid="uid://cvy704m3pbd1f" path="res://CarFonts/Chevrolet.ttf" id="5_704yv"]
[ext_resource type="PackedScene" uid="uid://ctio2j2fnerpk" path="res://65_chevy_malibu/scene.gltf" id="6_h78xa"]
[ext_resource type="Texture2D" uid="uid://ctfrp0h2jjkif" path="res://CarFonts/3f4564b0adf0ea11bb064097616be628.png" id="8_eyk4x"]
[ext_resource type="FontFile" uid="uid://cfinroaghwgd7" path="res://klein-headline/KleinHeadline-BoldOblique.ttf" id="8_nvbpb"]
[ext_resource type="FontFile" uid="uid://db654gvwuv7yr" path="res://CarFonts/NissanOpti.otf" id="9_4q26d"]

[sub_resource type="PlaneMesh" id="PlaneMesh_24ex3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_64a7q"]
transparency = 1
albedo_color = Color(0.52549, 0.52549, 0.52549, 0.647059)
metallic = 1.0
roughness = 0.0
refraction_enabled = true

[sub_resource type="ViewportTexture" id="ViewportTexture_xta6s"]
viewport_path = NodePath("SubViewport")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a1mw1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0pq5w"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mp4nm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_untbv"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pq5w"]
bg_color = Color(0, 0, 0.384314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mp4nm"]
bg_color = Color(0, 0, 0.384314, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_704yv"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_704yv")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.0299148, -0.219233, 0.975214, 0.00672183, 0.975672, 0.21913, -0.99953, -1.86352e-09, 0.0306607, 12.5287, 6.59875, -31.6137)

[node name="SubViewport" type="SubViewport" parent="."]

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(-0.0140496, -0.143003, 0.989623, 0.00121263, 0.989717, 0.143034, -0.999901, 0.00320961, -0.0137317, 10.6492, 4.50477, -0.915972)

[node name="Cor" type="Node3D" parent="."]

[node name="OmniLight3D7" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50428, 2.60401, -6.41122)
light_energy = 7.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cor"]
transform = Transform3D(9.14702, 0, 0, 0, 1, 0, 0, 0, 10.013, -0.398246, 0, -0.0968595)
mesh = SubResource("PlaneMesh_24ex3")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_64a7q")

[node name="OmniLight3D" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.28355, 0)
light_energy = 7.02

[node name="OmniLight3D2" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.38974, 1.76309, 0)
light_energy = 7.0

[node name="OmniLight3D4" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, -10.5757)
light_energy = 7.0

[node name="OmniLight3D5" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, 7.8168)
light_energy = 7.0

[node name="OmniLight3D6" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89402, 1.76309, 6.32944)
light_energy = 7.0

[node name="OmniLight3D9" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.448557, 1.78101, -1.7227)
light_energy = 7.0

[node name="OmniLight3D8" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.13688, 2.60401, -8.30065)
light_energy = 7.0

[node name="SpotLight3D" type="SpotLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 0.740335, 0.672238, 0, -0.672238, 0.740335, 0, 4.94202, 6.00634)
light_energy = 4.0
spot_range = 8.195

[node name="OmniLight3D3" type="OmniLight3D" parent="Cor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08606, 1.76309, 0)
light_energy = 7.0

[node name="Sketchfab_Scene" parent="Cor" instance=ExtResource("4_h78xa")]
transform = Transform3D(-0.9, 0, 1.35896e-07, 0, 0.9, 0, -1.35896e-07, 0, -0.9, 0, 0, -1.06398)
script = ExtResource("3_704yv")

[node name="Sketchfab_Scene2" parent="Cor" instance=ExtResource("4_h78xa")]
transform = Transform3D(0.9, -7.86805e-08, 7.86805e-08, -7.86805e-08, -0.9, 0, 7.86805e-08, -6.87847e-15, -0.9, 0, 0, -1.06398)
script = ExtResource("3_704yv")

[node name="E46" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -31.6496)
visible = false

[node name="OmniLight3D7" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.50428, 2.60401, -6.41122)
light_energy = 7.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="E46"]
transform = Transform3D(9.14702, 0, 0, 0, 1, 0, 0, 0, 10.013, -0.398246, 0, -0.0968595)
mesh = SubResource("PlaneMesh_24ex3")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_64a7q")

[node name="OmniLight3D" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.28355, 0)
light_energy = 7.02

[node name="OmniLight3D2" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -6.38974, 1.76309, 0)
light_energy = 7.0

[node name="OmniLight3D4" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, -10.5757)
light_energy = 7.0

[node name="OmniLight3D5" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740989, 1.76309, 7.8168)
light_energy = 7.0

[node name="OmniLight3D6" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.89402, 1.76309, 6.32944)
light_energy = 7.0

[node name="OmniLight3D9" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.448557, 1.78101, -1.7227)
light_energy = 7.0

[node name="OmniLight3D8" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.13688, 2.60401, -8.30065)
light_energy = 7.0

[node name="SpotLight3D" type="SpotLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 0.740335, 0.672238, 0, -0.672238, 0.740335, 0, 4.94202, 6.00634)
light_energy = 4.0
spot_range = 8.195

[node name="OmniLight3D3" type="OmniLight3D" parent="E46"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.08606, 1.76309, 0)
light_energy = 7.0

[node name="Sketchfab_Scene3" parent="E46" instance=ExtResource("6_h78xa")]
transform = Transform3D(-2.8, 0, -2.44784e-07, 0, 2.8, 0, 2.44784e-07, 0, -2.8, 0, 0, -0.757978)
script = ExtResource("3_704yv")

[node name="Sketchfab_Scene4" parent="E46" instance=ExtResource("6_h78xa")]
transform = Transform3D(2.8, -2.44784e-07, -2.44784e-07, -2.44784e-07, -2.8, 0, -2.44784e-07, 2.13997e-14, -2.8, 0, 0, -0.757978)
script = ExtResource("3_704yv")

[node name="CorLabels" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="TextureRect" type="TextureRect" parent="CorLabels"]
layout_mode = 0
offset_left = 330.0
offset_top = 133.0
offset_right = 842.0
offset_bottom = 645.0
texture = SubResource("ViewportTexture_xta6s")

[node name="Label" type="Label" parent="CorLabels"]
layout_mode = 0
offset_left = 312.0
offset_top = 183.0
offset_right = 859.0
offset_bottom = 266.0
theme_override_fonts/font = ExtResource("5_704yv")
theme_override_font_sizes/font_size = 70
text = "1990 Corvete (C4)"

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 990.0
offset_top = 282.0
offset_right = 1081.0
offset_bottom = 346.0
text = "NEXT"

[node name="E46Labels" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="E46Labels"]
layout_mode = 0
offset_left = 390.0
offset_top = 181.0
offset_right = 755.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("5_704yv")
theme_override_font_sizes/font_size = 70
text = "1965 Malibu"

[node name="Button10" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 184.0
offset_top = 61.0
offset_right = 339.0
offset_bottom = 128.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("8_nvbpb")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_a1mw1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_0pq5w")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_mp4nm")
theme_override_styles/normal = SubResource("StyleBoxFlat_untbv")
text = "Return"

[node name="Button2" type="Button" parent="."]
offset_left = 821.0
offset_top = 519.0
offset_right = 1140.0
offset_bottom = 628.0
theme_override_fonts/font = ExtResource("9_4q26d")
theme_override_font_sizes/font_size = 80
theme_override_styles/hover = SubResource("StyleBoxFlat_0pq5w")
theme_override_styles/normal = SubResource("StyleBoxFlat_mp4nm")
text = "START"

[node name="Button3" type="Button" parent="."]
visible = false
offset_left = 71.0
offset_top = 279.0
offset_right = 168.0
offset_bottom = 418.0
text = "BACK"

[node name="Button7" type="Button" parent="."]
custom_minimum_size = Vector2(0, 50)
offset_left = 402.0
offset_top = 125.0
offset_right = 742.0
offset_bottom = 185.0
mouse_filter = 2
theme_override_constants/icon_max_width = 110
theme_override_fonts/font = ExtResource("5_704yv")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxEmpty_704yv")
text = "Chevrolet"
icon = ExtResource("8_eyk4x")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button10" to="." method="_on_button_10_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
